# shallot.rs

./: .gitignore  .vercelignore  ACCESSIBILITY_REVIEW_TODO.md  AGENTS.md  CODE_REVIEW.md  COMPONENT_AUDIT.md  Cargo.toml  Cintext  Component Catalog.md  Component Gallery.md  DEVELOPMENT_NOTES.md  Engineering Standards.md  INFRASTRUCTURE_IMPROVEMENTS.md  Lessons Learned.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  Project Overview.md  Quality Assurance.md  SHOWCASE_REFACTOR_FINAL_REPORT.txt  SHOWCASE_REFACTOR_PROGRESS.md  SHOWCASE_REFACTOR_SUMMARY.md  Shallot Zero JS Showcase Revamp  Shallot Zero JS UI Refactor Plan  Shallot rs Zero JS Showcase Refactor  Strategic Roadmap.md  The Shallot Manifesto.md  The Zero-JS Challenge.md  all_component_mods.txt  components_with_css.txt  takeover.md  vercel.json
.github/: DEPLOYMENT.md
.github/workflows/: ci.yml  (+1 more)
.qwen/: PROJECT_SUMMARY.md
.vercel/: project.json
components_individual/: mod.rs
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
output/: feed.xml  index.html
qlogs/: openai-2026-02-23T20-43-37.364Z-7880f6fd.json  openai-2026-02-23T20-43-47.760Z-39992990.json  openai-2026-02-23T20-43-57.734Z-8a269374.json  openai-2026-02-23T20-44-11.312Z-f6b4ee3f.json  openai-2026-02-23T20-44-33.726Z-476d5039.json  openai-2026-02-23T20-44-42.962Z-fad17018.json  openai-2026-02-23T20-44-46.602Z-bf2252bf.json  openai-2026-02-23T20-44-52.879Z-acf1cfad.json  openai-2026-02-23T20-44-56.540Z-7a23033e.json  openai-2026-02-23T20-44-59.693Z-6f1869f7.json  openai-2026-02-23T20-45-04.159Z-1ff250ff.json  (+697 more)
shallot/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
shallot/src/: lib.rs
shallot_build/: Cargo.toml
shallot_build/src/: lib.rs
shallot_components/: Cargo.toml  README.md
shallot_components/src/: accordion.rs  alert.rs  animated_beam.rs  animated_text.rs  aspect_ratio.rs  avatar.rs  avatar_group.rs  badge.rs  bento.rs  border_beam.rs  bottom_sheet.rs  box.rs  breadcrumbs.rs  button.rs  calendar.rs  capdrop.rs  card.rs  carousel.rs  charts.rs  checkbox_group.rs  code_block.rs  collapsible.rs  color_picker.rs  command_palette.rs  component.rs  confetti.rs  copy_button.rs  counter.rs  credit_card_input.rs  data_display.rs  date_picker.rs  date_range_picker.rs  description_list.rs  dialog.rs  divider.rs  dock.rs  drawer.rs  dropdown.rs  empty_state.rs  enhanced_button.rs  (+89 more)
shallot_foundation/: Cargo.toml  README.md
shallot_foundation/src/: animations.rs  css_utils.rs  design_tokens.rs  icon.rs  lib.rs  responsive.rs  theme.rs  transitions.rs
shallot_testing/: Cargo.toml
shallot_testing/src/: lib.rs
(+52 files in other folders)
