[package]
name = "shallot_components"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core UI components for Shallot.rs"
documentation = "https://docs.rs/shallot_components"
repository = "https://github.com/shallot-rs/shallot"
readme = "README.md"

[dependencies]
maud = "0.26"
shallot_foundation = { path = "../shallot_foundation" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
