[package]
name = "shallot_testing"
version = "0.1.0"
edition = "2021"
authors = ["Shallot.rs Team"]
description = "Comprehensive testing framework for Shallot.rs components"
license = "MIT"
repository = "https://github.com/shallot-rs/shallot"
keywords = ["testing", "ui", "components", "accessibility", "performance"]
categories = ["development-tools::testing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "component_benchmarks"
# harness = false